# subnamd

./: LICENSE  README.md  pyproject.toml
.github/workflows/: auto-release.yml
src/subnamd/: __init__.py  subnamd.py
