[project]
name = "subnamd"
description = "Submit NAMD jobs."
version = "0.1.0"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Michael von Domaros", email = "mvondomaros@uni-marburg.de" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
    "Environment :: Console",
]

requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
]

[project.urls]
Homepage = "https://github.com/mvondomaros-lab/subnamd"
Issues = "https://github.com/mvondomaros-lab/subnamd/issues"
CI = "https://github.com/mvondomaros-lab/subnamd/actions"

[project.scripts]
subnamd = "subnamd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
